--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.2.3",
     "@astrojs/react": "^2.2.0",
+    "@phosphor-icons/react": "^2.0.9",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "astro": "^2.4.1",
+    "astro": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
