--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/netlify": "^2.2.3",
     "@astrojs/react": "^2.2.0",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "@types/react": "^18.2.6",
