--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^2.2.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-toast": "^1.1.3",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "@types/react": "^18.2.6",
