--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^2.5.1",
     "openseadragon": "^3.1.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
