--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-toast": "^1.1.3",
+    "@react-spring/web": "^9.7.2",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "astro": "^2.5.1",
