--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "openseadragon": "^3.1.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "timeago-react": "^3.0.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/openseadragon": "^3.0.6",
     "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4"
+    "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.1"
   }
 }
