--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "astro": "^2.5.1",
+    "formik": "^2.4.1",
     "openseadragon": "^3.1.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
