--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Puplic vars are available on server and client
+# Public vars are available on server and client
 PUBLIC_SUPABASE="your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
