--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.2",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-12",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "accept-language-parser": "^1.5.0",
