--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@annotorious/react": "^3.0.0-pre-alpha-15",
+    "@annotorious/react": "^3.0.0-pre-alpha-16",
     "@astrojs/netlify": "^2.2.3",
     "@astrojs/react": "^2.2.0",
     "@phosphor-icons/react": "^2.0.9",
@@ -18,7 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.2",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-15",
+    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-16",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "accept-language-parser": "^1.5.0",
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.4.1",
     "timeago-react": "^3.0.6",
     "uuid": "^9.0.0"
