--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.2",
     "@recogito/react-text-annotator": "^3.0.0-pre-alpha-16",
@@ -31,6 +32,7 @@
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.4.1",
     "timeago-react": "^3.0.6",
+    "tus-js-client": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
