--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@recogito/react-text-annotator": "^3.0.0-pre-alpha-16",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
+    "@uppy/core": "^3.2.1",
+    "@uppy/xhr-upload": "^3.3.0",
     "accept-language-parser": "^1.5.0",
     "astro": "^2.5.1",
     "formik": "^2.4.1",
