--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@annotorious/react": "file:../../annotorious/annotorious-v3/packages/annotorious-react",
+    "@annotorious/react": "^3.0.0-pre-alpha-23",
     "@astrojs/netlify": "^2.2.3",
     "@astrojs/react": "^2.2.0",
     "@phosphor-icons/react": "^2.0.9",
@@ -19,7 +19,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.2",
-    "@recogito/react-text-annotator": "file:../../recogito/text-annotator/packages/text-annotator-react",
+    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-23",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "@uppy/core": "^3.2.1",
