--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.3",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-25",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.22.0",
     "@uppy/core": "^3.2.1",
