added usernsap scripts to baselayout

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Public vars are available on server and client
 PUBLIC_SUPABASE="your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
+USERSNAP_API_KEY="usersnap-api-key"
 
 # Non-public vars stay on the server
 ROOM_SECRET="your-room-secret"
