fixing how the env variables work

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Public vars are available on server and client
 PUBLIC_SUPABASE="your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
-USERSNAP_API_KEY="usersnap-api-key"
+PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
+PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
 
 PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
 PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
