--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uppy/xhr-upload": "^3.3.0",
     "accept-language-parser": "^1.5.0",
     "astro": "^2.5.1",
+    "confetti-explosion-react": "^0.1.2",
     "formik": "^2.4.1",
     "openseadragon": "^3.1.0",
     "react": "^18.2.0",
