--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "accept-language-parser": "^1.5.0",
     "astro": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
+    "crypto-js": "^4.1.1",
     "formik": "^2.4.1",
     "openseadragon": "^3.1.0",
     "react": "^18.2.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/accept-language-parser": "^1.5.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/openseadragon": "^3.0.6",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
