--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.3",
     "@recogito/react-text-annotator": "^3.0.0-pre-alpha-31-hotfix",
