--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,23 @@
+###
 # Public vars are available on server and client
+###
+
+# Supabase 
 PUBLIC_SUPABASE="your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
+# Usersnap feedback form
 PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
 PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
 
+###
 # Non-public vars stay on the server
+###
+
+# Secret 'salt' to compute the realtime room identifiers
 ROOM_SECRET="your-room-secret"
+
+# IIIF server location
+IIIF_URL="http://www.example.com/iiif/public/resources"
+IIIF_KEY="your-iiif-server-api-key"
+IIIF_PROJECT_ID="iiif-project-uuid-for-this-app"
