Login form: enabled 'sign-in with SSO' button

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
 PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
 
+# SSO domain
+PUBLIC_SSO_DOMAIN="example.com"
+
 ###
 # Non-public vars stay on the server
 ###
