Breaking change: Supabase URL env var now requires full URL with protocol

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 ###
 
 # Supabase 
-PUBLIC_SUPABASE="your-project.supabase.co"
+PUBLIC_SUPABASE="https://your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
 # Usersnap feedback form
