--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto-js": "^4.1.1",
     "formik": "^2.4.1",
     "openseadragon": "^3.1.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
@@ -49,6 +50,7 @@
     "@types/accept-language-parser": "^1.5.3",
     "@types/crypto-js": "^4.1.1",
     "@types/openseadragon": "^3.0.6",
+    "@types/papaparse": "^5.3.9",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/uuid": "^9.0.1"
