Added 2nd env var, so Supabase URL can be configured differently for browser- and server-client

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 
 # Supabase 
 PUBLIC_SUPABASE="https://your-project.supabase.co"
+# SUPABASE_SERVERCLIENT_URL ="https://your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
 # Usersnap feedback form
