--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,6 @@
 
 # Supabase 
 PUBLIC_SUPABASE="https://your-project.supabase.co"
-# SUPABASE_SERVERCLIENT_URL ="https://your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
 # Usersnap feedback form
@@ -17,6 +16,11 @@ PUBLIC_SSO_DOMAIN="example.com"
 ###
 # Non-public vars stay on the server
 ###
+
+# Optional: if the Astro server needs a different URL to reach
+# Supabase, set this here. If not set, PUBLIC_SUPABASE will
+# be used both on the server and the browser
+# SUPABASE_SERVERCLIENT_URL ="https://your-project.supabase.co"
 
 # Secret 'salt' to compute the realtime room identifiers
 ROOM_SECRET="your-room-secret"
