--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^3.0.0-pre-alpha-49",
     "@recogito/react-text-annotator": "^3.0.0-pre-alpha-60",
+    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@uppy/core": "^3.2.1",
