https://github.com/performant-software/cove-recogito/issues/1

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@astrojs/ts-plugin": "^1.2.0",
     "@types/accept-language-parser": "^1.5.3",
     "@types/crypto-js": "^4.1.1",
     "@types/openseadragon": "^3.0.6",
