--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^3.0.0-pre-alpha-49",
-    "@recogito/react-pdf-annotator": "^0.0.1-alpha-02",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-63",
+    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@uppy/core": "^3.2.1",
