Rich Text Editor working!

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^3.0.0-pre-alpha-49",
     "@recogito/react-pdf-annotator": "^0.0.1-alpha-05",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-66",
+    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-67",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@uppy/core": "^3.2.1",
@@ -42,10 +42,12 @@
     "lexical": "^0.12.2",
     "openseadragon": "^3.1.0",
     "papaparse": "^5.4.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-quill": "^2.0.0",
     "react-textarea-autosize": "^8.4.1",
     "timeago-react": "^3.0.6",
     "uuid": "^9.0.0"
