Good working version

--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@table-library/react-table-library": "^4.1.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@uppy/core": "^3.2.1",
     "@uppy/xhr-upload": "^3.3.0",
     "accept-language-parser": "^1.5.0",
     "astro": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "^4.1.1",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
     "formik": "^2.4.1",
     "linkedom": "^0.15.6",
     "openseadragon": "^3.1.0",
