--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^3.0.0-pre-alpha-52",
-    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
+    "@recogito/react-pdf-annotator": "^0.0.1-alpha-08",
     "@recogito/react-text-annotator": "^3.0.0-pre-alpha-71",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
