--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@annotorious/react": "^3.0.0-pre-alpha-59",
+    "@annotorious/react": "^3.0.0-rc.1",
     "@astrojs/netlify": "^2.2.3",
     "@astrojs/node": "^5.3.3",
     "@astrojs/react": "^2.2.0",
@@ -28,9 +28,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.3",
     "@react-spring/web": "^9.7.3",
-    "@recogito/annotorious-supabase": "^3.0.0-pre-alpha-52",
-    "@recogito/react-pdf-annotator": "^0.0.1-alpha-08",
-    "@recogito/react-text-annotator": "^3.0.0-pre-alpha-72",
+    "@recogito/annotorious-supabase": "^3.0.0-rc.1",
+    "@recogito/react-pdf-annotator": "^0.1.0",
+    "@recogito/react-text-annotator": "^3.0.0-rc.1",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@table-library/react-table-library": "^4.1.7",
