--- a/src/config.json
+++ b/src/config.json
@@ -8,8 +8,8 @@
     "home_banner": "https://iiif-staging.archivengine.com/iiif/3/ezzvwzdd3kug71gf0tj6vxxx9ihu;1/full/1200,/0/default.jpg",
     "background_color": "black",
     "contrast_color": "white",
-    "bottom_logos_enabled": false,
-    "top_logos_enabled": false,
+    "bottom_logos_enabled": true,
+    "top_logos_enabled": true,
     "footer_message": "Powered by Recogito"
   },
   "authentication": {
