--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/react": "^2.2.0",
     "@emotion/react": "^11.11.1",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
