--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^3.0.0-rc.7",
-    "@recogito/react-pdf-annotator": "^1.0.0-rc.5",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.7",
     "@recogito/react-text-annotator": "^3.0.0-rc.9",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
