--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-moment": "^1.1.3",
     "react-quill": "^2.0.0",
     "react-textarea-autosize": "^8.4.1",
+    "react-virtualized-auto-sizer": "^1.0.22",
+    "react-window": "^1.8.10",
     "timeago-react": "^3.0.6",
     "uuid": "^9.0.0"
   },
@@ -73,6 +75,7 @@
     "@types/papaparse": "^5.3.9",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
