--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "1.0.0-rc.9",
-    "@recogito/react-pdf-annotator": "1.0.0-rc.10",
+    "@recogito/react-pdf-annotator": "^1.0.0-rc.11",
     "@recogito/react-text-annotator": "^3.0.0-rc.17",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
