--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
-    "@recogito/annotorious-supabase": "file:../annotorious-supabase",
+    "@recogito/annotorious-supabase": "^1.0.0-rc.10",
     "@recogito/react-pdf-annotator": "^1.0.0-rc.12",
     "@recogito/react-text-annotator": "^3.0.0-rc.18",
     "@supabase/auth-helpers-shared": "^0.3.4",
