--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@allmaps/iiif-parser": "^1.0.0-beta.33",
     "@annotorious/react": "^3.0.0-rc.19",
     "@astrojs/netlify": "^2.2.3",
     "@astrojs/node": "^5.3.3",
