--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@components/*": ["src/components/*"],
       "@i18n": ["src/i18n/index.ts"],
       "@layouts/*": ["src/layouts/*"],
+      "@plugins": ["src/plugins"],
       "@themes/*": ["src/themes/*"]
     },
     "resolveJsonModule": true,
