Made IIIF setup (IIIF Cloud vs. Supabase + Cantaloupe) configurable

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@
 PUBLIC_SUPABASE="https://your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
 
+# IIIF server configuration
+PUBLIC_IIIF_CONFIGURATION="IIIF_CLOUD"
+# PUBLIC_IIIF_CONFIGURATION="SUPABASE_CANTALOUPE"
+# PUBLIC_IIIF_CANTALOUPE_PATH="/iiif" 
+
 # Usersnap feedback form
 PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
 PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
