--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install-plugin": "node ./plugins/install-plugin.js",
     "astro": "astro",
     "preinstall": "node ./plugins/build-registry",
-    "postinstall": "find plugins -maxdepth 1 -mindepth 1 -type d -exec npm install --prefix {} \\;"
+    "postinstall": "node copy-pdf-worker.js && find plugins -maxdepth 1 -mindepth 1 -type d -exec npm install --prefix {} \\;"
   },
   "dependencies": {
     "@allmaps/iiif-parser": "^1.0.0-beta.33",
@@ -37,7 +37,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^1.0.0-rc.10",
-    "@recogito/react-pdf-annotator": "^1.0.0-rc.15",
+    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
     "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
