--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "^1.0.0-rc.10",
-    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
-    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.19",
+    "@recogito/react-text-annotator": "3.0.0-rc.24",
     "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "^2.32.0",
     "@table-library/react-table-library": "^4.1.7",
