--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/react": "^2.2.0",
     "@emotion/react": "^11.11.1",
     "@phosphor-icons/react": "^2.0.9",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -48,6 +49,7 @@
     "@uppy/xhr-upload": "^3.3.0",
     "accept-language-parser": "^1.5.0",
     "astro": "^2.5.1",
+    "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "^4.1.1",
     "eslint": "^8.53.0",
