Fix for memory on build-node

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "build-node": "astro build --config astro.config.node.mjs",
-    "preview-node": "node ./dist/server/entry.mjs",
+    "preview-node": "node --max-old-space-size=4096 ./dist/server/entry.mjs",
     "install-plugin": "node ./plugins/install-plugin.js",
     "astro": "astro",
     "preinstall": "node ./plugins/build-registry",
