--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,12 @@ PUBLIC_IIIF_CONFIGURATION="IIIF_CLOUD"
 PUBLIC_USERSNAP_GLOBAL_API_KEY="usersnap-global-api-key"
 PUBLIC_USERSNAP_PROJECT_API_KEY="usersnap-project-api-key"
 
+# Google Analytics
+PUBLIC_GOOGLE_ANALYTICS_TAG_ID="google-analytics-tag"
+
+# Configuration
+PUBLIC_ENABLE_USER_INVITE=TRUE    # When 'TRUE' Org Admins can invite email/password users from the User Management UI
+
 ###
 # Non-public vars stay on the server
 ###
@@ -31,3 +37,6 @@ ROOM_SECRET="your-room-secret"
 IIIF_URL="http://www.example.com/iiif/public/resources"
 IIIF_KEY="your-iiif-server-api-key"
 IIIF_PROJECT_ID="iiif-project-uuid-for-this-app"
+
+# Supabase
+SUPABASE_SERVICE_KEY="your-supabase-service-key"
