--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
-    "@recogito/annotorious-supabase": "^1.0.0-rc.10",
+    "@recogito/annotorious-supabase": "^1.0.0-rc.11",
     "@recogito/react-pdf-annotator": "^1.0.0-rc.21",
     "@recogito/react-text-annotator": "^3.0.0-rc.30",
-    "@supabase/auth-helpers-shared": "^0.3.4",
-    "@supabase/supabase-js": "^2.32.0",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.5",
     "@table-library/react-table-library": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
