--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "postinstall": "node copy-pdf-worker.js && find plugins -maxdepth 1 -mindepth 1 -type d -exec npm install --prefix {} \\;"
   },
   "dependencies": {
-    "@allmaps/iiif-parser": "^1.0.0-beta.37",
-    "@annotorious/react": "^3.0.0-rc.29",
+    "@allmaps/iiif-parser": "1.0.0-beta.37",
+    "@annotorious/react": "3.0.0-rc.29",
     "@astrojs/netlify": "^2.6.0",
     "@astrojs/node": "^5.3.6",
     "@astrojs/react": "^2.3.2",
-    "@emotion/react": "^11.11.4",
     "@phosphor-icons/react": "^2.1.6",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -40,55 +39,53 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
-    "@recogito/annotorious-supabase": "^1.0.0-rc.11",
-    "@recogito/react-pdf-annotator": "^1.0.0-rc.21",
-    "@recogito/react-text-annotator": "^3.0.0-rc.30",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.5",
+    "@recogito/annotorious-supabase": "1.0.0-rc.11",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.21",
+    "@recogito/react-text-annotator": "3.0.0-rc.30",
+    "@supabase/ssr": "0.3.0",
+    "@supabase/supabase-js": "2.43.5",
     "@table-library/react-table-library": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "@uppy/core": "^3.11.3",
+    "@uppy/core": "3.11.3",
     "@uppy/xhr-upload": "3.6.4",
     "accept-language-parser": "^1.5.0",
     "astro": "^2.10.15",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
-    "crypto-js": "^4.2.0",
-    "eslint": "^9.5.0",
-    "eslint-plugin-react": "^7.34.2",
-    "formik": "^2.4.6",
-    "linkedom": "^0.18.3",
-    "manifesto.js": "^4.2.17",
+    "crypto-js": "4.2.0",
+    "formik": "2.4.6",
+    "linkedom": "0.18.3",
+    "manifesto.js": "4.2.17",
     "moment": "^2.30.1",
     "openseadragon": "4.0.0",
-    "papaparse": "^5.4.1",
-    "quill": "^2.0.2",
+    "papaparse": "5.4.1",
+    "quill": "2.0.2",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
-    "react-moment": "^1.1.3",
-    "react-textarea-autosize": "^8.5.3",
-    "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10",
-    "timeago-react": "^3.0.6",
-    "uuid": "^10.0.0"
+    "react-dropzone": "14.2.3",
+    "react-moment": "1.1.3",
+    "react-textarea-autosize": "8.5.3",
+    "react-virtualized-auto-sizer": "1.0.24",
+    "react-window": "1.8.10",
+    "timeago-react": "3.0.6",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.2.0",
     "@types/accept-language-parser": "^1.5.6",
-    "@types/crypto-js": "^4.2.2",
-    "@types/openseadragon": "^3.0.10",
-    "@types/papaparse": "^5.3.14",
+    "@types/crypto-js": "4.2.2",
+    "@types/openseadragon": "3.0.10",
+    "@types/papaparse": "5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-window": "^1.8.8",
-    "@types/uuid": "^9.0.8",
+    "@types/react-window": "1.8.8",
+    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   }
 }
