--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
+    "date-fns": "^3.6.0",
     "formik": "2.4.6",
     "linkedom": "0.18.3",
     "manifesto.js": "4.2.17",
@@ -63,7 +64,6 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-dropzone": "14.2.3",
-    "react-moment": "1.1.3",
     "react-textarea-autosize": "8.5.3",
     "react-virtualized-auto-sizer": "1.0.24",
     "react-window": "1.8.10",
