--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react-textarea-autosize": "8.5.3",
     "react-virtualized-auto-sizer": "1.0.24",
     "react-window": "1.8.10",
+    "sanitize-filename": "^1.6.3",
+    "slugify": "^1.6.6",
     "timeago-react": "3.0.6",
     "uuid": "10.0.0"
   },
