--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
     "platform_name": "Recogito",
     "site_name": "Default",
     "welcome_blurb": "Recogito is the premier Text and Image Annotation system",
-    "site_color": "orange",
+    "site_color": "#fbbb33",
     "home_banner": "https://iiif-staging.archivengine.com/iiif/3/1ylyaluscm668rynn5a7d6mwsqe6;1/full/max/0/default.jpg",
     "background_color": "black",
     "contrast_color": "white",
