--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.37",
-    "@annotorious/react": "3.0.0-rc.29",
+    "@annotorious/react": "3.0.0-rc.30",
     "@astrojs/netlify": "^5.3.2",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
@@ -40,8 +40,8 @@
     "@radix-ui/react-tooltip": "^1.1.1",
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "1.0.0-rc.11",
-    "@recogito/react-pdf-annotator": "1.0.0-rc.22",
-    "@recogito/react-text-annotator": "3.0.0-rc.31",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.23",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/ssr": "0.4.0",
     "@supabase/supabase-js": "2.43.6",
     "@table-library/react-table-library": "^4.1.7",
