--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.37",
     "@annotorious/react": "3.0.0-rc.30",
-    "@astrojs/netlify": "^5.3.2",
+    "@astrojs/netlify": "^5.3.3",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
     "@phosphor-icons/react": "^2.1.6",
@@ -41,20 +41,20 @@
     "@react-spring/web": "^9.7.3",
     "@recogito/annotorious-supabase": "1.0.0-rc.11",
     "@recogito/react-pdf-annotator": "1.0.0-rc.23",
-    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
+    "@recogito/react-text-annotator": "3.0.0-rc.35",
     "@supabase/ssr": "0.4.0",
-    "@supabase/supabase-js": "2.43.6",
+    "@supabase/supabase-js": "2.44.1",
     "@table-library/react-table-library": "^4.1.7",
     "@uppy/core": "3.11.3",
     "@uppy/xhr-upload": "3.6.4",
     "accept-language-parser": "^1.5.0",
-    "astro": "^4.11.1",
+    "astro": "^4.11.3",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
     "date-fns": "^3.6.0",
     "formik": "2.4.6",
-    "linkedom": "0.18.3",
+    "linkedom": "0.18.4",
     "manifesto.js": "4.2.17",
     "moment": "^2.30.1",
     "openseadragon": "4.0.0",
