--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@recogito/annotorious-supabase": "1.0.0-rc.14",
     "@recogito/react-pdf-annotator": "1.0.0-rc.23",
     "@recogito/react-text-annotator": "3.0.0-rc.35",
-    "@supabase/ssr": "0.4.0",
+    "@supabase/auth-helpers-shared": "^0.3.4",
     "@supabase/supabase-js": "2.44.2",
     "@table-library/react-table-library": "^4.1.7",
     "@uppy/core": "3.11.3",
