--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
     "date-fns": "^3.6.0",
+    "deep-diff": "^1.0.2",
     "formik": "2.4.6",
     "linkedom": "0.18.4",
     "manifesto.js": "4.2.17",
@@ -74,6 +75,7 @@
     "@astrojs/ts-plugin": "^1.8.0",
     "@types/accept-language-parser": "^1.5.6",
     "@types/crypto-js": "4.2.2",
+    "@types/deep-diff": "^1.0.5",
     "@types/openseadragon": "3.0.10",
     "@types/papaparse": "5.3.14",
     "@types/react": "^18.3.3",
