--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-dropzone": "14.2.3",
+    "react-error-boundary": "^4.0.13",
     "react-textarea-autosize": "8.5.3",
     "react-virtualized-auto-sizer": "1.0.24",
     "react-window": "1.8.10",
