--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recogito-client",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0.beta.6",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.37",
     "@annotorious/react": "3.0.0-rc.30",
-    "@astrojs/netlify": "^5.3.5",
+    "@astrojs/netlify": "^5.4.0",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
     "@phosphor-icons/react": "^2.1.7",
@@ -38,17 +38,17 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-spring/web": "^9.7.3",
+    "@react-spring/web": "^9.7.4",
     "@recogito/annotorious-supabase": "1.0.0-rc.14",
     "@recogito/react-pdf-annotator": "1.0.0-rc.23",
     "@recogito/react-text-annotator": "3.0.0-rc.35",
     "@supabase/ssr": "0.4.0",
-    "@supabase/supabase-js": "2.44.2",
+    "@supabase/supabase-js": "2.44.4",
     "@table-library/react-table-library": "^4.1.7",
     "@uppy/core": "3.11.3",
     "@uppy/xhr-upload": "3.6.4",
     "accept-language-parser": "^1.5.0",
-    "astro": "^4.11.4",
+    "astro": "^4.12.2",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
@@ -73,7 +73,7 @@
     "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@astrojs/ts-plugin": "^1.8.0",
+    "@astrojs/ts-plugin": "^1.9.0",
     "@types/accept-language-parser": "^1.5.6",
     "@types/crypto-js": "4.2.2",
     "@types/openseadragon": "3.0.10",
