--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,10 @@ IIIF_PROJECT_ID="iiif-project-uuid-for-this-app"
 
 # Supabase
 SUPABASE_SERVICE_KEY="your-supabase-service-key"
+
+# Mail - Used for Transactional Emails (invites, etc.)
+MAIL_HOST=<your email host>
+MAIL_PORT=<your email.port>
+MAIL_USERNAME=<your email username>
+MAIL_PASSWORD=<your email password>
+MAIL_FROM_ADDRESS=<the from address for emails>
