--- a/src/config.json
+++ b/src/config.json
@@ -5,12 +5,11 @@
     "site_name": "Default",
     "welcome_blurb": "Recogito is the premier Text and Image Annotation system",
     "site_color": "#fbbb33",
-    "home_banner": "https://iiif-staging.archivengine.com/iiif/3/1ylyaluscm668rynn5a7d6mwsqe6;1/full/max/0/default.jpg",
+    "home_banner": "https://staging.iiifcloud.com/public/resources/553cf1c3-bf85-431d-855c-9a13efe1d819/iiif",
     "background_color": "#07529A",
     "contrast_color": "white",
     "bottom_logos_enabled": false,
-    "top_logos_enabled": false,
-    "footer_message": "Powered by Recogito Studio",
+    "top_logo_enabled": false,
     "favicon": "favicon.svg"
   },
   "authentication": {
