Annotated PDF download: proof-of-concept

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-spring/web": "^9.7.4",
-    "@recogito/annotorious-supabase": "1.0.0-rc.14",
+    "@recogito/annotorious-supabase": "1.0.0",
     "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
     "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@supabase/ssr": "0.5.1",
@@ -49,7 +49,8 @@
     "@uppy/xhr-upload": "3.6.4",
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
-    "astro": "^4.15.1",
+    "annotpdf": "^1.0.15",
+    "astro": "^4.15.2",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
