Updated to latest dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0.beta.6",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --host",
     "build": "NODE_OPTIONS=--max_old_space_size=4096 && astro build",
     "build-node": "NODE_OPTIONS=--max_old_space_size=4096 && astro build --config astro.config.node.mjs",
     "preview-node": "node --max-old-space-size=4096 ./dist/server/entry.mjs",
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.39",
-    "@annotorious/react": "3.0.2",
+    "@annotorious/react": "3.0.5",
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.2",
@@ -39,9 +39,9 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-spring/web": "^9.7.4",
-    "@recogito/annotorious-supabase": "1.0.0-rc.14",
-    "@recogito/react-pdf-annotator": "1.0.0-rc.27",
-    "@recogito/react-text-annotator": "3.0.0-rc.44",
+    "@recogito/annotorious-supabase": "1.0.0",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.29",
+    "@recogito/react-text-annotator": "3.0.0-rc.45",
     "@supabase/ssr": "0.5.1",
     "@supabase/supabase-js": "2.45.3",
     "@table-library/react-table-library": "^4.1.7",
@@ -49,7 +49,7 @@
     "@uppy/xhr-upload": "3.6.4",
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
-    "astro": "^4.15.1",
+    "astro": "^4.15.3",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
@@ -57,7 +57,7 @@
     "formik": "2.4.6",
     "linkedom": "0.18.4",
     "moment": "^2.30.1",
-    "nodemailer": "^6.9.14",
+    "nodemailer": "^6.9.15",
     "openseadragon": "4.0.0",
     "papaparse": "5.4.1",
     "quill": "2.0.2",
@@ -75,7 +75,7 @@
     "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@astrojs/ts-plugin": "^1.10.1",
+    "@astrojs/ts-plugin": "^1.10.2",
     "@types/accept-language-parser": "^1.5.6",
     "@types/crypto-js": "4.2.2",
     "@types/nodemailer": "^6.4.15",
