--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "openseadragon": "4.0.0",
     "papaparse": "5.4.1",
     "quill": "2.0.2",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
