--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@allmaps/iiif-parser": "1.0.0-beta.39",
-    "@annotorious/react": "3.0.3",
+    "@annotorious/react": "3.0.5",
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.2",
@@ -40,8 +40,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-spring/web": "^9.7.4",
     "@recogito/annotorious-supabase": "1.0.0",
-    "@recogito/react-pdf-annotator": "file:../pdf-annotator-js/packages/pdf-annotator-react",
-    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
+    "@recogito/react-pdf-annotator": "^1.0.0-rc.29",
+    "@recogito/react-text-annotator": "^3.0.0-rc.45",
     "@supabase/ssr": "0.5.1",
     "@supabase/supabase-js": "2.45.3",
     "@table-library/react-table-library": "^4.1.7",
