Makes default lang configurable + applies it in invite-user-to-project API endpoint

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 # Public vars are available on server and client
 ###
 
+# PUBLIC_DEFAULT_LANGUAGE="en" # en is the default fallback
+
 # Supabase 
 PUBLIC_SUPABASE="https://your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
