#86 - Updating RightDrawer component to include "defaultTab" prop; Updating TextAnnotationDesktop and ImageAnnotationDesktop components to set "defaultTab"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
       "@i18n": ["src/i18n/index.ts"],
       "@layouts/*": ["src/layouts/*"],
       "@plugins": ["src/plugins"],
-      "@themes/*": ["src/themes/*"]
+      "@themes/*": ["src/themes/*"],
+      "@util/*": ["src/util/*"]
     },
     "resolveJsonModule": true,
     "plugins": [
