--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ MAIL_PORT=<your email.port>
 MAIL_USERNAME=<your email username>
 MAIL_PASSWORD=<your email password>
 MAIL_FROM_ADDRESS=<the from address for emails>
+
+# Define this if you have a help page you would like to 
+# send users to.
+# PUBLIC_HELP_REDIRECT="https://help.example.com"
