--- a/package.json
+++ b/package.json
@@ -102,6 +102,6 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.29.1",
-    "esbuild": "0.21.5"
+    "@esbuild/linux-x64": "0.21.5"
   }
 }
