Added labels, etc.

--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
     "platform_name": "Recogito",
     "site_name": "Default",
     "welcome_blurb": "Recogito is the premier Text and Image Annotation system",
-    "site_color": "#fbbb33",
+    "site_color": "#FFF",
     "home_banner": "https://staging.iiifcloud.com/public/resources/553cf1c3-bf85-431d-855c-9a13efe1d819/iiif",
     "background_color": "#07529A",
     "contrast_color": "white",
