Work in progress

--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "^1.2.0",
-    "@recogito/pdf-annotator": "1.0.0-rc.41",
-    "@recogito/react-pdf-annotator": "1.0.0-rc.41",
-    "@recogito/react-text-annotator": "3.0.0-rc.54",
+    "@recogito/pdf-annotator": "1.0.0-rc.42",
+    "@recogito/react-pdf-annotator": "1.0.0-rc.42",
+    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
     "@recogito/studio-sdk": "^0.4.0",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
