--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@recogito/annotorious-supabase": "^1.2.0",
     "@recogito/pdf-annotator": "^1.0.0",
     "@recogito/react-pdf-annotator": "^1.0.0",
-    "@recogito/react-text-annotator": "file:../text-annotator/packages/text-annotator-react",
+    "@recogito/react-text-annotator": "^3.0.1",
     "@recogito/studio-sdk": "^0.4.1",
-    "@recogito/text-annotator": "file:../text-annotator/packages/text-annotator",
-    "@recogito/text-annotator-tei": "file:../text-annotator/packages/extension-tei",
+    "@recogito/text-annotator": "^3.0.1",
+    "@recogito/text-annotator-tei": "^3.0.1",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
     "@table-library/react-table-library": "^4.1.12",
@@ -58,7 +58,7 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
-    "astro": "^5.6.0",
+    "astro": "^5.6.1",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "crypto-js": "4.2.0",
