Work in progress

--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "@react-spring/web": "^9.7.5",
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.0.2",
+    "@recogito/plugin-geotagging": "file:../geotagger",
     "@recogito/plugin-revisions": "file:../plugin-revisions",
     "@recogito/react-pdf-annotator": "^1.0.2",
     "@recogito/react-text-annotator": "^3.0.2",
-    "@recogito/studio-sdk": "file:../recogito-studio-sdk",
+    "@recogito/studio-sdk": "^0.6.0",
     "@recogito/text-annotator": "^3.0.2",
     "@recogito/text-annotator-tei": "^3.0.2",
     "@supabase/ssr": "0.6.1",
@@ -59,7 +60,7 @@
     "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
-    "astro": "^5.7.6",
+    "astro": "^5.7.7",
     "classnames": "^2.5.1",
     "confetti-explosion-react": "^0.1.2",
     "cozy-iiif": "^0.2.2",
