--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@phosphor-icons/react": "^2.1.8",
+    "@phosphor-icons/react": "2.1.7",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
@@ -44,10 +44,11 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-spring/web": "^10.0.0",
     "@recogito/annotorious-supabase": "1.3.2",
+    "@recogito/plugin-ner": "file:../plugin-ner",
     "@recogito/pdf-annotator": "^1.0.3",
     "@recogito/react-pdf-annotator": "^1.0.3",
     "@recogito/react-text-annotator": "^3.0.3",
-    "@recogito/studio-sdk": "^0.6.2",
+    "@recogito/studio-sdk": "^0.6.3",
     "@recogito/text-annotator": "^3.0.3",
     "@recogito/text-annotator-tei": "^3.0.3",
     "@supabase/ssr": "0.6.1",
