--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,9 @@ MAIL_FROM_ADDRESS=<the from address for emails>
 # Define this if you have a help page you would like to 
 # send users to.
 # PUBLIC_HELP_REDIRECT="https://help.example.com"
+
+# Trigger.dev
+# Define these if you are using the NER Plaugin
+# TRIGGER_SECRET_KEY=<your secret key>
+# TASK_PAYLOAD_OFFLOAD_THRESHOLD=5242880
+# TRIGGER_SERVER_URL=http://localhost:3040/
