--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ pnpm-debug.log*
 .idea
 
 src/components/Plugins/deployedPlugins.ts
+src/plugins/generated/**
 plugins/**
 public/pdf.worker.min.mjs
 
