Remove confetti, replace usewaypoint email-builder

--- a/package.json
+++ b/package.json
@@ -55,12 +55,10 @@
     "@table-library/react-table-library": "^4.1.15",
     "@uppy/core": "5.0.2",
     "@uppy/xhr-upload": "5.0.1",
-    "@usewaypoint/email-builder": "^0.0.8",
     "accept-language-parser": "^1.5.0",
     "annotpdf": "^1.0.15",
     "astro": "^5.14.1",
     "classnames": "^2.5.1",
-    "confetti-explosion-react": "^0.1.2",
     "cozy-iiif": "^0.5.1",
     "crypto-js": "4.2.0",
     "date-fns": "^4.1.0",
@@ -78,6 +76,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.1.1",
     "react-dropzone": "14.3.8",
+    "react-email": "^4.3.2",
     "react-error-boundary": "^6.0.0",
     "react-textarea-autosize": "8.5.9",
     "react-window": "^2.1.2",
