Replace email-builder with react-email

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,10 @@ MAIL_USERNAME=<your email username>
 MAIL_PASSWORD=<your email password>
 MAIL_FROM_ADDRESS=<the from address for emails>
 
+# Mail - Key used to encrypt and decrypt invite tokens. Should be a base64
+# encoded string generated using, for example, openssl rand -base64 32
+INVITE_CRYPTO_KEY=<base64 encoded 256-bit cryptographic key>
+
 # Define this if you have a help page you would like to 
 # send users to.
 # PUBLIC_HELP_REDIRECT="https://help.example.com"
