--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@react-spring/web": "^10.0.3",
     "@recogito/annotorious-supabase": "1.3.2",
     "@recogito/pdf-annotator": "^1.5.1",
@@ -76,7 +78,6 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.1.1",
     "react-dropzone": "14.3.8",
-    "react-email": "^4.3.2",
     "react-error-boundary": "^6.0.0",
     "react-textarea-autosize": "8.5.9",
     "react-window": "^2.1.2",
