#375 - Pulling Trigger.dev project ID out to environment variable

--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,9 @@ INVITE_CRYPTO_KEY=<base64 encoded 256-bit cryptographic key>
 # PUBLIC_HELP_REDIRECT="https://help.example.com"
 
 # Trigger.dev
+TRIGGER_SERVER_URL=http://localhost:3040/
+TRIGGER_SECRET_KEY=<your secret key>
+TRIGGER_PROJECT_ID=proj_abcdefg
+
 # Define these if you are using the NER Plaugin
-# TRIGGER_SECRET_KEY=<your secret key>
 # TASK_PAYLOAD_OFFLOAD_THRESHOLD=5242880
-# TRIGGER_SERVER_URL=http://localhost:3040/
