--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cozy-iiif": "^0.5.1",
     "crypto-js": "4.2.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "formik": "2.4.6",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
